# fastapi_async

./: Dockerfile  compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: pipeline.yml
fastapi_async/: app.py  database.py  models.py  schemas.py  security.py
fastapi_async/routes/: auth.py  todos.py  users.py
migrations/: env.py
migrations/versions/: 29a244bd0a5d_create_users_table.py  89be9d73159a_create_todos_table.py
src/: app.py  database.py  schemas.py  security.py
src/routes/: auth.py  todos.py  users.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
